update aall and fix modules

--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -1,2 +1,6 @@
 <app-barra-lateral></app-barra-lateral>
-<main class="main">ESTO ES UN MAIN</main>
+<main class="main">
+    <div class="card flex justify-content-center">
+        <p-button label="Check" icon="pi pi-check"></p-button>
+    </div>
+</main>
